[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yandex-news-translator"
version = "1.0.0"
description = "RSS news parser and translator via Yandex Cloud API"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Grigoriy Filonov"},
]
keywords = ["rss", "translator", "yandex", "news", "parser"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "feedparser>=6.0.11",
    "feedgen>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
    "black>=23.0.0",
]

[project.scripts]
yandex-news-translator = "main:main"

[project.urls]
Homepage = "https://github.com/FilonovGrigoriy/yandex-news-translator"
Repository = "https://github.com/FilonovGrigoriy/yandex-news-translator"
Issues = "https://github.com/FilonovGrigoriy/yandex-news-translator/issues"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=term-missing --cov-report=xml"
